# Github-Easy-Install-MCP-Server

./: .gitignore  README.md  prompt.txt  pyproject.toml  requirements.txt
src/github_install_mcp/: __init__.py  server.py  test_execute_command.py  test_server.py
src/github_install_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
