[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github_install_mcp"
version = "0.1.0"
description = "MCP Server for GitHub repository installation"
readme = "README.md"
authors = [
    {name = "Haotian Shen, Zixuan Wang, Xun Zhang"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "gitpython",
    "PyGithub",
]

[project.entry-points.fastmcp]
github_install = "github_install_mcp:mcp"